--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@ package-lock.json
 
 # visual studio code
 .history
+
+logs/
+npm-debug.log
+yarn-error.log
+node_modules/
+package-lock.json
+yarn.lock
+coverage/
+.idea/
+run/
+.DS_Store
+*.sw*
+*.un~
