--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "classnames": "^2.2.5",
     "dva": "^2.2.3",
     "dva-loading": "^2.0.3",
+    "egg": "^2.11.2",
+    "egg-scripts": "^2.9.1",
+    "egg-view-assets": "^1.3.0",
+    "egg-view-nunjucks": "^2.2.0",
     "enquire-js": "^0.2.1",
     "lodash": "^4.17.10",
     "lodash-decorators": "^6.0.0",
@@ -47,9 +51,7 @@
     "react-fittext": "^1.0.0",
     "rollbar": "^2.3.4",
     "setprototypeof": "^1.1.0",
-    "url-polyfill": "^1.0.10",
-    "egg": "^2.11.2",
-    "egg-scripts": "^2.9.1"
+    "url-polyfill": "^1.0.10"
   },
   "devDependencies": {
     "babel-eslint": "^8.1.2",
